[package]
name = "sqlite-wasm-uuid-rs"
authors = ["Luca Cappelletti"]
description = "Rust SQLite-WASM extension for UUIDv4 (Random) & UUIDv7 (Time-ordered) generation."
categories = ["development-tools::ffi", "wasm", "database"]
keywords = ["sqlite", "sqlite-wasm", "wasm", "webassembly", "uuid4", "uuid7"]
version = "0.1.0"
readme = "README.md"
edition = "2024"
license = "MIT"

[workspace.package]
edition = "2024"

[dependencies]
sqlite-wasm-rs = { version = "0.5.2" }
wasm-bindgen = { version = "0.2.104", default-features = false }
uuid = { version = "1.20.0", features = ["v4", "v7", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.54"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
bare_urls = "forbid"
invalid_codeblock_attributes = "forbid"
invalid_html_tags = "forbid"
missing_crate_level_docs = "forbid"
unescaped_backticks = "forbid"
redundant_explicit_links = "forbid"
invalid_rust_codeblocks = "forbid"

[lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }
